# togra

./: MSP.hs  Path.hs  RenderTree.hs  SP.hs  SPUtil.hs  Shader.hs  SimpleShader.hs  TSP.hs  Time.hs  Timing.hs  Togra.hs  TograStream.hs  TograUtil.hs  Transform.hs  Vao.hs  Vbo.hs  VertexUtil.hs  frames.py  gl_compat.py  groups.py  mucking.hs  paths.py  shapes.py  simpleStreams.py  simple_shader.py  streams.hs  streams.py  streams10.hs  streams2.hs  streams3.hs  streams4.hs  streams5.hs  streams6.hs  streams7.hs  streams8.hs  streams9.hs  timing.py  togra.cabal  togra.py  transforms.py  (+3 more)
docs/: slides.txt  talk.txt
examples/: Bezier.hs  Bezier2.hs  BezierPatch.hs  Examples.hs  Line.hs  Sphere.hs  Sphere2.hs  Sphere3.hs
paper/: Main.tex
paper/style/: utils.sty
tests/: ShaderTest.hs  blank.py  circle.py  cube.py  ogcl_vbo_shaders.py  path.py  sphere.py  square.py  vbotest.py
