Name:			Togra
Version:		0.0
Description:		Experimental 3D library based around streams
License:		BSD3
License-file:		LICENSE
Author:			Shane Stephens
Maintainer:		shanestephens@gmail.com
Build-Type:		Simple
Cabal-Version:   	>=1.2

Library
  Build-Depends:	base >= 4.0, OpenGL, StateVar, ObjectName, datetime, 
                        GLUT, OpenGLRaw
  Extensions:		GADTs
  Exposed-Modules:	SP, SPUtil, Vbo, Vao, Shader, TograStream, MSP, Togra,
                        Path, Time

Executable Examples
  Build-Depends:        ui-command, data-default, monads-fd
  Main-is:              examples/Examples.hs
  Extensions:           GADTs

